--- a/frontend/src/locales/ae.json
+++ b/frontend/src/locales/ae.json
@@ -125,7 +125,7 @@
     "coming_soon_cover": "قريبا تغطية",
     "contact_us_boxed": "اتصل بنا محاصر",
     "contact_us_cover": "اتصل بنا الغلاف",
-    "rights_reserved": "جميع الحقوق محفوظة - مركز الاتصالات وتكنلوجيا المعلومات - جامعة حلوان",
+    "rights_reserved": "جميع الحقوق محفوظة - مركز الاتصالات وتكنولوجيا المعلومات - جامعة حلوان",
     "Signin_title": "تسجيل الدخول",
     "Signin_massage": "أدخل بريدك الإلكتروني وكلمة المرور لتسجيل الدخول",
     "Signin_email": "البريد الالكتروني",
